--- a/about.css
+++ b/about.css
@@ -46,6 +46,12 @@ body {
 /* Footer */
 .footer {
     width: auto;
-    height: 30rem;
+    height: 35rem;
     background-color: rgb(43, 43, 43);
+}
+
+.hr {
+    margin-left: 5rem;
+    margin-right: 5rem;
+    border: solid 1px;
 }
