--- a/about.css
+++ b/about.css
@@ -45,9 +45,12 @@ body {
 
 /* Footer */
 .footer {
-    width: auto;
+    width: 100%;
     height: 35rem;
     background-color: rgb(43, 43, 43);
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 .footer a {
@@ -58,5 +61,5 @@ body {
 .hr {
     margin-left: 5rem;
     margin-right: 5rem;
-    border: solid 1px;
+    border: white solid 1px;
 }
